# apps/api/src/regions/regions.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get } from '@nestjs/common';
+import { Controller, Get, Param } from '@nestjs/common';
 import { ApiOkResponse } from '@nestjs/swagger';
 
 import { RegionsService } from './regions.service';
@@ -12,5 +12,11 @@ export class RegionsController {
   @ApiOkResponse({ type: RegionDto, isArray: true })
   findAll(): Promise<RegionDto[]> {
     return this.regionsService.findAll();
+  }
+
+  @Get(':idRegion')
+  @ApiOkResponse({ type: RegionDto })
+  findOne(@Param('idRegion') idRegion: string): Promise<RegionDto> {
+    return this.regionsService.findOne(idRegion);
   }
 }
